// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiChoiceList Renders empty list with custom caption props 1`] = `
<section
  className="multi-choice-list-modal__body"
>
  <p
    className="fd-has-font-style-italic"
  >
    not assigned message
  </p>
  <p
    className="fd-has-font-style-italic"
  >
    no entities available message
  </p>
</section>
`;

exports[`MultiChoiceList Renders empty list with default caption props 1`] = `
<section
  className="multi-choice-list-modal__body"
>
  <p
    className="fd-has-font-style-italic"
  />
  <p
    className="fd-has-font-style-italic"
  >
    No more entries available
  </p>
</section>
`;

exports[`MultiChoiceList Renders two lists of object items 1`] = `"choosen 1choosen 2"`;

exports[`MultiChoiceList Renders two lists of object items 2`] = `
Array [
  "non-choosen 1",
]
`;

exports[`MultiChoiceList Renders two lists of simple items 1`] = `"choosen 1choosen 2choosen 3"`;

exports[`MultiChoiceList Renders two lists of simple items 2`] = `
Array [
  "non-choosen 1",
  "non-choosen 2",
]
`;
